# picoPaper

./: .gitignore  LICENSE  README.md
dotnet/PicoPaper/: PicoPaper.sln
dotnet/PicoPaper/DevOats.PicoPaper/: ApplicationArgsRunner.cs  DevOats.PicoPaper.csproj  GlobalSuppressions.cs  Program.cs
dotnet/PicoPaper/DevOats.PicoPaper/Properties/: launchSettings.json
dotnet/PicoPaper/DevOats.PicoPaperLib/: BwColors.cs  DevOats.PicoPaperLib.csproj  DeviceResponse.cs  DisplayInfo.cs  DisplayResolution.cs  GlobalSuppressions.cs  ImageParser.cs  PicoPaperCommands.cs  PicoPaperConnectionException.cs  PicoPaperDevice.cs  PicoPaperDeviceInfo.cs  PicoPaperException.cs  ResponseTypes.cs  SerialPortConnector.cs
pico/: CMakeLists.txt  PicoPaper.c
pico/lib/GUI/: GUI_Paint.c  GUI_Paint.h
pico/lib/e-paper/: EPD_7in5_V2.c  EPD_7in5_V2.h
pico/picoDisplay/: CMakeLists.txt  Ident.json  picoDisplay.c  picoDisplay.h
